# 5p_multi_agentic_plateform

./: README.md  app.py  pyproject.toml  requirements.txt
data/cleaned/: Buyer Power_cleaned.json  New Entrants_cleaned.json  Rivalry_cleaned.json  Substitute Products_cleaned.json  Supplier Power_cleaned.json  Threat of Substitutes_cleaned.json
data/raw/: Buyer Power_crawl.json  New Entrants_crawl.json  Rivalry_crawl.json  Substitute Products_crawl.json  Supplier Power_crawl.json  Threat of Substitutes_crawl.json
data/report/: Buyer Power_report.json  New Entrants_report.json  Rivalry_report.json  Substitute Products_report.json  Supplier Power_report.json  Threat of Substitutes_report.json  merged_report.txt  report.json
idea/: idea_report.json
index/: Buyer Power-index.faiss  Buyer Power-index.pkl  New Entrants-index.faiss  New Entrants-index.pkl  Rivalry-index.faiss  Rivalry-index.pkl  Substitute Products-index.faiss  Substitute Products-index.pkl  Supplier Power-index.faiss  Supplier Power-index.pkl  Threat of Substitutes-index.faiss  Threat of Substitutes-index.pkl  document-index.faiss  document-index.pkl
outputs/: dashboard.json  dashboard_analysis.json  verdict.json
prompts/: Buyer Power_prompt.json  New Entrants_prompt.json  Rivalry_prompt.json  Substitute Products_prompt.json  Supplier Power_prompt.json  prompt.txt
src/: 5pAgent.py  FivePAgent.py  ForceRAG.py  JudgeLLM.py  PortalyzeBot.py  VerifAgent.py  crawler.py  dashboard_llm.py  deepCrawler.py  merge_Report.py  metaPrompter.py  pipeline.py  smartCleaner.py
src/utils/: judge_prompts.py  (+2 more)
