[project]
name = "deep-crawler-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backoff>=2.2.1",
    "deepseek>=1.0.0",
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "jq>=1.10.0",
    "keybert>=0.9.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.6",
    "langchain-openai>=0.3.28",
    "langdetect>=1.0.9",
    "nltk>=3.9.1",
    "uvicorn>=0.35.0",
]
